# workforce-intelligence-platform-governance

./: .gitignore  Makefile  README.md  TASKS.md  pyproject.toml
.github/workflows/: governance-ci.yml
airflow/dags/: governance_audit_dag.py
policies/: data_access_matrix.md  data_classification.yml
sql/: bootstrap_roles.sql
src/: __init__.py
src/audit/: alerts.py  scanner.py  trigger_generator.py
src/classifier/: __init__.py  loader.py
src/codegen/: cli.py  ddl_generator.py  view_generator.py
src/utils/: db.py
tests/: conftest.py  test_codegen_cli.py  test_ddl_generator.py  test_loader.py  test_scanner.py  test_view_generator.py
